--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
       - name: Copy to dist
         run: |
           mkdir dist
-          cp index.html dist/index.html
-          cp data.json dist/data.json
-          cp script.js dist/script.js      
+          cp docs/index.html dist/index.html
+          cp docs/data.json dist/data.json
+          cp docs/script.js dist/script.js      
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
