--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,9 @@ permissions:
 jobs:
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest  
+    environment:
+      name: github-pages  
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:    
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
