--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,46 +1,53 @@
-name: CICD
+name: PIPELINE
 
 on:
   push:
     branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+
 permissions:
   id-token: write
   pages: write
   contents: read
-  
+
 jobs:
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest  
+    runs-on: ubuntu-latest
     environment:
-      name: github-pages  
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:    
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!      
+      name: github-pages
 
-        
-      # lägg till create csv file (glöm inte pip install)
-      # lägg till Create JSON file
-      # Köra enhetstester     
-      #python .\calculateTests.py 
-      - name: Copy to dist
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.12'
+
+      - name: Install dependencies
+        run: pip install pytest
+
+      - name: Run csvtojson.py
+        run: python csvtojson.py
+
+      - name: Run unit tests
+        run: pytest tests/test_csvtojson.py
+
+      - name: Copy files to dist
         run: |
           mkdir dist
           cp docs/index.html dist/index.html
           cp docs/data.json dist/data.json
-          cp docs/script.js dist/script.js      
+          cp docs/script.js dist/script.js
+
       - name: Setup Pages
         uses: actions/configure-pages@v5
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: 'dist'
+          path: dist
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
