Lägger till generate.py i pipeline

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: pip install pytest
 
+      - name: Run generate.py
+        run: python generate.py
+
       - name: Run csvtojson.py
         run: python csvtojson.py
 
