--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
           python-version: '3.12'
 
       - name: Install dependencies
-        run: pip install pytest
+        run: pip install pytest faker
 
       - name: Run generate.py
         run: python generate.py
